# brix-cache

./: .clangd  .dockerignore  .git-blame-ignore-revs  .gitignore  AGENTS.md  BUILD.md  BUILD_INSTALL.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CNAME.example  CONTRIBUTING.md  Doxyfile  MIGRATION-NOTICE.md  README.md  README_HUMAN.md  TESTING.md  THIRD-PARTY-NOTICES  config  index.html  pytest.ini  start_log.txt
.github/workflows/: codechecker.yml  coverage.yml  fanalyzer.yml  fuzz.yml  guards.yml  loc.yml  site.yml
_astro/: about.B8EdJ8Zc.css  about.DaGFxWpU.css  engineers.B1hEzg8q.css  index.BGHlS8z7.css  interoperability.DZgjd6j1.css
about/: index.html
apidocs/: acc_8h.html  acc_8h.js  acc_8h__dep__incl.map  acc_8h__dep__incl.md5  acc_8h__incl.map  acc_8h__incl.md5  acc_8h_source.html  access__auth_8c.html  access__auth_8c.js  access__auth_8c__incl.map  access__auth_8c__incl.md5  access__auth_8c_source.html  access__internal_8h.html  access__internal_8h.js  access__internal_8h__dep__incl.map  access__internal_8h__dep__incl.md5  access__internal_8h__incl.map  access__internal_8h__incl.md5  access__internal_8h_source.html  access__log_8h.html  access__log_8h.js  access__log_8h__dep__incl.md5  access__log_8h__incl.md5  access__log_8h_source.html  access__log__internal_8h.html  access__log__internal_8h.js  access__log__internal_8h__dep__incl.map  access__log__internal_8h__dep__incl.md5  access__log__internal_8h__incl.map  access__log__internal_8h__incl.md5  access__log__internal_8h_source.html  access__log__sesslog_8c.html  access__log__sesslog_8c.js  access__log__sesslog_8c__incl.map  access__log__sesslog_8c__incl.md5  access__log__sesslog_8c_source.html  accesslog_2access__log_8c.html  accesslog_2access__log_8c.js  accesslog_2access__log_8c__incl.map  accesslog_2access__log_8c__incl.md5  (+14089 more)
apidocs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  (+189 more)
brixmount/: index.html
ceph-migration/: index.html
client/: Makefile  README.md  bench_fuse_protocols.py
client/apps/: README.md  diag_bench.c  diag_check.c  diag_compare.c  diag_doctor.c  diag_internal.h  diag_metabench.c  diag_misc.c  diag_topology.c  diag_watch.c  mpxstats.c  storascan_core.h  storascan_unittest.c  wait41.c  xrd.c  xrd_battery.c  xrd_clockskew.c  xrd_doctor.c  xrd_internal.h  xrd_mount.c  xrdadler32.c  xrdcinfo.c  xrdckverify.c  xrdcp.c  xrdcp_internal.h  xrdcp_recursive.c  xrdcp_transfer.c  xrdcrc32c.c  xrdcrc64.c  xrddiag.c  xrdfs.c  xrdfs_data.c  xrdfs_fmt.c  xrdfs_internal.h  xrdfs_meta.c  xrdfs_walk.c  xrdfs_web.c  xrdgsiproxy.c  xrdgsitest.c  xrdmapc.c  (+11 more)
client/completions/: _brix-client  brix-tools.bash  check_completions.sh
client/examples/: brix_readv_demo.c  brix_stat_demo.c  xrdc_readv_demo.c  xrdc_stat_demo.c
client/lib/: README.md  aio.c  aio.h  aio_buffers.c  aio_conn.c  aio_engine.c  aio_internal.h  aio_io.c  aio_mgr.c  auth.c  brix.h  brix_auth.h  brix_net.h  brix_ops.h  capture.c  checksum.c  cks_verify.c  cli_cksum.c  cli_conn.c  cli_cred.c  cli_opts.c  conn.c  copy.c  copy_block.c  copy_internal.h  cred.c  (+82 more)
cmake/: BrixClientTools.cmake  BrixVerifyBins.cmake
contrib/: brix-cache.conf.example  grafana-dashboard.json  prometheus-alerts.yml  xrootd.conf.example
docs/: FEATURE_GAPS.md  IMPLEMENTATION_PLAN.md  MIGRATION-NOTICE.md  PHASE1_RESOLVER_IMPLEMENTATION.md  PHASE3_VFS_OPERATIONS.md  PHASE4.md  PHASE5_TPC_UNIFICATION.md  TEST_PROTOCOL_MAPPING.md  Tier1-Stream-Data-Paths.md  Tier2-Stream-Data-Paths.md  UNIFICATION_STRATEGY.md  architecture.md  authentication.md  background.md  building.md  cluster-mode.md  comparison-nginx-xrootd-vs-canonical.md  comparison-with-xrootd.md  comprehensive-testing-roadmap.md  configuration.md  contributing.md  deployment-guide.md  development.md  feature-roadmap.md  getting-started.md  handler-reference.md  hierarchical-cms-cluster.md  index.md  manager-mode.md  metrics-and-logging.md  missing_optional.md  next-steps.md  nginx-concepts.md  operations.md  optimizations.md  pki.md  protocol-notes.md  proxy-mode.md  quick-start-guide.md  quirks.md  (+11 more)
evidence/: index.html
faq/: index.html
interoperability/: index.html
k8s-tests/: FULL_K8S_TEST_SUITE.md  Makefile  README.md  TEST_REGISTRY.md  xrd-k8s  xrd-lab
network-testing/: index.html
only-here/: index.html
packaging/: brix-cache.service  brixcvmfs-automount.service  brixcvmfs@.service  nginx-xrootd.service
site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
src/: README.md  feature_flags.h  ngx_xrootd_module.h
tests/: .registry_declare_report.txt  README.md  _cache_partial_helpers.py  _conf_batch4_crib.md  _test_a_robustness_helpers.py  _test_conf_errors_helpers.py  _test_conf_fattr_helpers.py  _test_conf_framing_helpers.py  _test_conf_pgio_helpers.py  _test_conf_prepfattr_helpers.py  _test_conf_rename_helpers.py  _test_conf_sessions_helpers.py  _test_conf_stattypes_helpers.py  _test_cross_protocol_shared_helpers_helpers.py  _test_evil_actor_v3_helpers.py  _test_file_api_helpers.py  _test_gsi_handshake_helpers.py  _test_http_webdav_status_codes_helpers.py  _test_native_xrdcp_xrdfs_helpers.py  _test_proxy_mode_helpers.py  _test_proxy_protocol_edges_helpers.py  _test_xrootd_performance_conformance_helpers.py  _xrdcl_proxy.py  _xrdcl_worker.py  af_policy_unittest.c  backend_matrix.py  brix.perf.conf  brutal_teardown.sh  build_dynamic_modules.sh  build_sanitizer.sh  cli_pty.py  cms_mesh_lib.py  cms_mesh_servers.py  cms_parent_stubs.py  config_parse.py  config_templates.py  conftest.py  conftest_mu.py  cstr_unittest.c  demo_dashboard_live.sh  (+815 more)
tools/: add_registry_markers.py  gen-docs.sh  index.html
utils/: README.md  make_bind_exploit_certs.py  make_proxy.py  make_token.py
(+5054 files in other folders)
